# reactos

./: ADMIN_PAGE_INTEGRATION_COMPLETE.md  COMPATIBILITY_SOLUTIONS.md  COMPILATION_INSTRUCTIONS.md  DOTNET_IMPLEMENTATION_PLAN.md  DOTNET_PROPRIETARY_IMPLEMENTATION.md  EXECUTE_PLAN_B_NOW.md  IMPLEMENTACAO_CONCLUIDA.md  INDEX.md  INVENTARIO_ARQUIVOS.md  KNOWN_LIMITATIONS.md  LOGON_UI_MODERNIZATION_SUMMARY.txt  PLAN_B_IMPLEMENTATION.md  PLAN_B_QUICK_START.md  PLAN_B_VISUAL_FLOW.md  PROJETO_FINAL_RESUMO.md  QUICK_VALIDATION_GUIDE.md  README_VSCODE_PATHS_A_B.md  SESSION_SUMMARY.txt  STUB_VS_PROPRIETARY_COMPARISON.md  TESTE_UEFI_SEM_DEBUG.md  UEFI_GPT_CHANGES_LOG.md  UEFI_GPT_IMPLEMENTATION_GUIDE.md  VSCODE_100PCT_PROPRIETARY.md  VSCODE_COMPATIBILITY.md  VSCODE_DOTNET_QUICK_START.md  VSCODE_INSTALLATION_COMPLETE.md  WIN10_DRIVER_COMPAT_README.md  build-reactos.bat  build_iso_now.cmd  build_reactos.cmd  build_reactos_64bit.cmd  build_reactos_amd64.cmd  create_bootcd.cmd  dotnet-install.bat  dotnet-verify.bat  vscode-install-100pct.bat  vscode-install-integrated.bat  vscode-install.bat  vscode-install.sh
base/setup/reactos/: ADMIN_INTEGRATION_GUIDE.txt  ADMIN_PAGE_README.md  CMakeLists.txt  FILES_MANIFEST.txt  IMPLEMENTACAO_COMPLETA.txt  QUICK_START.txt  modern_admin_page.c  modern_dialogs.rc  modern_pages.c  modern_resource.h  modern_setup.h  modern_ui.c  reactos.c  reactos.rc  test_admin_page.bat
base/system/logonui/: CMakeLists.txt  NT6design.c  WINDOWS7_LOGON_MODERNIZATION.md  logonui.c  logonui.h
boot/: boot_images.cmake
boot/bootdata/: CMAKELISTS_ADDITION.cmake  CMakeLists.txt  DOTNET_INTEGRATION_PATCH.cmake  DOTNET_NATIVE_INTEGRATION_GUIDE.md  INDEX_DOTNET_FILES.md  MODERN_DLLS_EXECUTIVE_SUMMARY.md  MODERN_DLLS_PROPRIETARY_ANALYSIS.md  QUICK_START.md  README_DOTNET_NATIVE.md  STATUS_FINAL.md  copy-proprietary-dlls.cmd  dotnet-download-native.bat  dotnet-integrate-native.ps1  hivedef.inf  install-modern-dlls-native.ps1  modern-dlls-download.bat
boot/bootdata/bootcd/: unattend.inf
boot/bootdata/dotnet/: CMakeLists.txt
dll/win32/: CMakeLists.txt
dll/win32/d2d1/: CMakeLists.txt  d2d1.spec  d2d1_main.c
dll/win32/d3d11/: CMakeLists.txt  d3d11_main.c
dll/win32/dwrite/: CMakeLists.txt  dwrite_main.c
dll/win32/dxgi/: CMakeLists.txt  dxgi_main.c
dll/win32/msgina/: CMakeLists.txt  gui.c
dll/win32/msgina/lang/: en-US.rc
dll/win32/msvcp140/: CMakeLists.txt  msvcp140.spec  msvcp140_main.c
dll/win32/vcruntime140/: CMakeLists.txt  vcruntime140.spec  vcruntime140_main.c
dll/win32/versionhelpers/: CMakeLists.txt  versionhelpers.c  versionhelpers.spec
dll/win32/vscode_compat/: CMakeLists.txt  appcontainer.c  d2d1_stub.c  d3d11_stub.c  dwrite_stub.c  dxgi_stub.c  gpu_stubs.c  process_stubs.c  vscode_compat.spec
media/inf/: win10_driver_compat.inf
ntoskrnl/: ntos.cmake
ntoskrnl/io/iomgr/: compat_shims.c  compat_shims.h  driver.c
sdk/tools/isohybrid/: CMakeLists.txt  isohybrid.c  uuid_windows.h  uuid_windows_simple.h
subsystems/: CMakeLists.txt
